[gd_scene load_steps=5 format=2]

[ext_resource path="res://operations/displaying/operation_display.gd" type="Script" id=1]
[ext_resource path="res://textures/operations/spritesheet.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33, 33 )

[node name="operation" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1855.0
margin_bottom = -996.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 1
mouse_default_cursor_shape = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 2
color = Color( 0.745098, 0.639216, 0.639216, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 64.0
margin_bottom = 64.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 64.0
margin_bottom = 77.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 64.0
mouse_filter = 2

[node name="sprite" type="Sprite" parent="MarginContainer/VBoxContainer/CenterContainer"]
position = Vector2( 31.8198, 31.8198 )
scale = Vector2( 0.75, 0.75 )
texture = SubResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="diff" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 64.0
margin_bottom = 35.0
text = "?              
"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 64.0
margin_bottom = 59.0
text = "Acheter"

[node name="price" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 64.0
margin_bottom = 77.0
text = "Prix"

[node name="selected" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "!!"
align = 1

[node name="Area2D" type="Area2D" parent="."]
z_index = 1
priority = 3.0
collision_layer = 33825

[node name="click_zone" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 32, 32 )
z_index = 1
shape = SubResource( 2 )
disabled = true

[connection signal="gui_input" from="." to="." method="_on_operation_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
